Fix fullscreen button icon alignment

--- a/src/css/videojs-hola-skin.less
+++ b/src/css/videojs-hola-skin.less
@@ -337,6 +337,7 @@
         order: 6;
     }
     .vjs-fullscreen-control {
+        width: 4em;
         &:before {
             content: '';
             background-image: url(@fullscreen-enter-glyph);
